force-app/main/default/objects/Project_Invoice__c/Project_Invoice__c.object-meta.xml
<CustomObject>
    <label>Project Invoice</label>
    <nameField>
        <displayFormat>INVOICE-{0000}</displayFormat>
        <label>Project Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>