force-app/main/default/objects/Project_Invoice__c/fields/Client_Employee__c.field-meta.xml
<CustomField>
    <fullName>Client_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Invoices</relationshipLabel>
    <relationshipName>Project_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>