force-app/main/default/objects/Project_Invoice__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>Client_Employee__r.FirstName +  Client_Employee__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>