force-app/main/default/objects/Project_Invoice__c/fields/Project_Amount__c.field-meta.xml
<CustomField>
    <fullName>Project_Amount__c</fullName>
    <formula>Project_Name__r.Project_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>