force-app/main/default/objects/Project_Invoice__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <label>Project Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>