force-app/main/default/objects/Project_Invoice__c/fields/Quote_Reference__c.field-meta.xml
<CustomField>
    <fullName>Quote_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Reference</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Project Invoices</relationshipLabel>
    <relationshipName>Project_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>