force-app/main/default/objects/Project_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Invoice_Amount__c</columns>
    <columns>Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>