force-app/main/default/objects/Project_Invoice__c/listViews/CYNTEXA_INVOICES.listView-meta.xml
<ListView>
    <fullName>CYNTEXA_INVOICES</fullName>
    <columns>Project_Name__c</columns>
    <columns>NAME</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Invoice_Amount__c</columns>
    <columns>Project_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>CYNTEXA INVOICES</label>
</ListView>